test/date/SPtests/RFC822/valid/3.php
<?php

$date = 'Fri, 5 Nov 94 13:15:30 GMT';
$expected = 784041330;

?>