test/date/SPtests/RFC822/invalid/four_digit_year.php
<?php

$date = 'Fri, 05 Nov 1994 13:15:30 GMT';
$expected = 784041330;

?>